[package]
name = "rspaste"
edition = "2021"
version = "0.1.5"
readme = "README.md"
license = "Apache-2.0"
license-file = "LICENSE"
repository = "https://github.com/aidakdev/rspaste"
authors = ["Aidak <hello@aidak.dev>"]
description = "Minimal, blazing-fast JSPaste API library"

[dependencies]
url = "2.2"
thiserror = "1.0"
serde_json = "1.0"
serde_path_to_error = "0.1"
ureq = { version = "2.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
strum = { version = "0.24", features = ["derive"] }